--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,13 @@ dependencies:
     sdk: flutter
   get: ^4.6.6
   image_picker: ^1.0.4
-  multi_image_layout: ^0.0.8
   mime: ^1.0.4
   video_player: ^2.7.2
   flutter_spinkit: ^5.2.0
   path_provider: ^2.1.1
+  lazy_load_indexed_stack: ^1.0.1
+  multi_image_layout: ^0.0.8
+  google_fonts: ^4.0.4
 dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
