--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   lazy_load_indexed_stack: ^1.0.1
   multi_image_layout: ^0.0.8
   google_fonts: ^4.0.4
+  chewie: ^1.7.1
 dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
